<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tempValID"
        android:layout_width="139sp"
        android:layout_height="78sp"
        android:text="@string/weather"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/windValID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tempLabelID"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/toForecastID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#81cdc6"
        android:onClick="moveToForecast"
        android:text="@string/button_to_forecast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toEndOf="@+id/refreshId"
        app:layout_constraintTop_toBottomOf="@+id/weatherValID" />

    <TextView
        android:id="@+id/tempLabelID"
        android:layout_width="139sp"
        android:layout_height="78sp"
        android:text="@string/temperature_string"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/windLabelID"
        app:layout_constraintEnd_toStartOf="@id/tempValID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/windLabelID"
        android:layout_width="139sp"
        android:layout_height="78sp"
        android:text="@string/wind_string"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/weatherLabelID"
        app:layout_constraintEnd_toStartOf="@+id/windValID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempLabelID" />

    <TextView
        android:id="@+id/weatherLabelID"
        android:layout_width="139sp"
        android:layout_height="78sp"
        android:text="@string/weather_string"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/toForecastID"
        app:layout_constraintEnd_toStartOf="@+id/weatherValID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windLabelID" />

    <TextView
        android:id="@+id/windValID"
        android:layout_width="139sp"
        android:layout_height="78sp"
        android:text="TextView"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/weatherValID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/windLabelID"
        app:layout_constraintTop_toBottomOf="@+id/tempValID"
        app:layout_constraintVertical_bias="0.407" />

    <TextView
        android:id="@+id/weatherValID"
        android:layout_width="139sp"
        android:layout_height="78sp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/toForecastID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/weatherLabelID"
        app:layout_constraintTop_toBottomOf="@+id/windValID" />

    <Button
        android:id="@+id/refreshId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#81cdc6"
        android:onClick="fetchWeatherData"
        android:text="@string/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/toForecastID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherLabelID" />

</androidx.constraintlayout.widget.ConstraintLayout>